# GoProControl

./: .gitignore  README.md  debug_settings.py  example_livestream.py  example_multi_camera.py  example_opencv.py  example_usage.py  gopro_full_state.json  gopro_usb.py  pyproject.toml  test_available_options.py  test_presets.py  test_recording.py  test_resolution_change.py
